RESOLVED FIXED22668
wx and gtk ports' MIMETypeRegistry don't have "htm"
https://bugs.webkit.org/show_bug.cgi?id=22668
Summary wx and gtk ports' MIMETypeRegistry don't have "htm"
Kevin Watters
Reported 2008-12-04 17:03:08 PST
We need to add a MIME mapping for the .htm extension to wx and GTK ports.
Attachments
Adds a MIME mapping for the .htm extension to wx and GTK ports. (1.51 KB, patch)
2008-12-04 17:03 PST, Kevin Watters
kevino: review+
Kevin Watters
Comment 1 2008-12-04 17:03:36 PST
Created attachment 25759 [details] Adds a MIME mapping for the .htm extension to wx and GTK ports.
Kevin Ollivier
Comment 2 2008-12-04 19:42:33 PST
Landed in r39014, thanks!
Note You need to log in before you can comment on or make changes to this bug.