Reviewed by Kevin Ollivier.

Add a MIME mapping for the .htm extension to wx and GTK ports.

https://bugs.webkit.org/show_bug.cgi?id=22668


Canonical link: https://commits.webkit.org/31221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39014 268f45cc-cd09-0410-ab3c-d52691b4dbfc