WebCore/platform/wx/MimeTypeRegistryWx.cpp
@@ -38,6 +38,7 @@ static const ExtensionMap extensionMap [] = {
     { "bmp", "image/bmp" },
     { "css", "text/css" },
     { "gif", "image/gif" },
+    { "htm", "text/html" },
     { "html", "text/html" },
     { "ico", "image/x-icon" },   
     { "jpeg", "image/jpeg" },
